# anmoku

./: .buildinfo  .gitignore  CNAME  Makefile  README.md  clients.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  resources.anime.html  resources.html  ruff.toml  search.html  searchindex.js  typing.html
.doctrees/: clients.doctree  environment.pickle  index.doctree  resources.anime.doctree  resources.doctree  typing.doctree
.github/workflows/: documentation.yaml  pytest.yml  test.yml
_modules/: index.html
_modules/anmoku/: errors.html
_modules/anmoku/clients/: async_.html  base.html  sync.html
_modules/anmoku/resources/anime/: anime.html  characters.html  episodes.html  staff.html
_sources/: resources.anime.rst.txt
anmoku/: __init__.py  errors.py  logger.py
anmoku/clients/: __init__.py  async_.py  async_client.py  base.py  base_client.py  errors.py  rate_limiting.py  sync.py
anmoku/objects/: __init__.py  anime.py  base.py  character.py
anmoku/objects/anime/: anime.py  characters.py
anmoku/resources/: __init__.py  base.py  character.py  image.py  title.py
anmoku/resources/anime/: __init__.py  anime.py  characters.py  episodes.py  external.py  forum.py  genre.py  news.py  pictures.py  recommendations.py  relations.py  reviews.py  staff.py
anmoku/resources/character/: __init__.py  character.py
anmoku/resources/helpers/: __init__.py  author.py  datetime.py  external.py  forum.py  genre.py  image.py  name.py  news.py  recommendations.py  relations.py  review.py  search_result.py  title.py  user.py
anmoku/resources/manga/: __init__.py  character.py  external.py  forum.py  genre.py  manga.py  news.py  pictures.py  recommendations.py  relations.py  reviews.py  statistics.py  user_updates.py
anmoku/typing/: anmoku.py
anmoku/typing/jikan/: __init__.py  anime.py  api.py  character.py  datetime.py  entry.py  external.py  forum.py  genre.py  image.py  more_info.py  name.py  news.py  person.py  producer.py  producers.py  recommendations.py  review.py  search_result.py  title.py  user.py
anmoku/typing/jikan/anime/: __init__.py  anime.py  characters.py  episode.py  staff.py
anmoku/typing/jikan/manga/: __init__.py  characters.py  manga.py  statistics.py  user_updates.py
anmoku/typing/jikan_api/: anime.py  jikan.py  producers.py
anmoku/typing/mal/: __init__.py  age_ratings.py
docs/: clients.rst  conf.py  index.rst  resources.anime.rst  resources.rst  typing.rst
examples/: get_anime.py  gradio_anime_search.py
tests/: __init__.py  test_client.py
tests/resources/: test_resources.py
tests/resources/anime/: test_anime.py  test_character.py
tests/resources/helpers/: test_image.py  test_name.py  test_search_result.py  test_title.py
